  * Added a "--clean" option to the mk script.
  * Updated the failure message to mention Tests & Coverage as well.
  * Added a coverage script that I can use with all the projects.
  * Renamed the SANITIZE_OPTIONS as just SANITIZE.
  * Print a message when the SANITIZE:BOOL=ON is used.
  * Removed the `${project_name}_` from the `COVERAGE` option.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 20 Aug 2021 15:51:25 -0700

snapcmakemodules (1.0.57.0~bionic) bionic; urgency=high

  * Added the CMAKE source & binary directory as strings in `-D` options.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 04 Jul 2021 16:26:56 -0700

snapcmakemodules (1.0.56.0~bionic) bionic; urgency=high

  * Added a couple more command line options to the mk script.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 04 Jun 2021 17:16:42 -0700

snapcmakemodules (1.0.55.0~bionic) bionic; urgency=high

  * Moved my `mk` script here so I don't have to copy/paste and badly update it.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 04 Jun 2021 13:01:43 -0700

snapcmakemodules (1.0.54.0~bionic) bionic; urgency=high

  * Added the DumpCMakeVariablesConfig.cmake file.
  * Various cleanups (copyright notices, spaces, newlines...)

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 29 May 2021 16:16:52 -0700

snapcmakemodules (1.0.53.0~bionic) bionic; urgency=high

  * Fixed three modules which had a name mismatched.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 14 May 2021 22:19:17 -0700

snapcmakemodules (1.0.52.2~bionic) bionic; urgency=high

  * Bump version to get a newer version for the 3 distros "supported".

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 05 Jan 2021 21:23:01 -0800

snapcmakemodules (1.0.52.0~bionic) bionic; urgency=high

  * Ignore `.../tmp/...` folders where we find `debian/control`.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 19 May 2020 16:55:09 -0700

snapcmakemodules (1.0.51.0~bionic) bionic; urgency=high

  * Applied a fix to the stripping of the NUM_JOBS variables.
